force-app/main/default/objects/SYS_BatchJournal__c/SYS_BatchJournal__c.object-meta.xml
<CustomObject>
    <description>SYS_BatchJournal is a system-level object used to record the execution of background batch jobs.
It provides a lightweight, structured view of all automated processes running in the org, allowing administrators to quickly verify when each job was executed, its result, and any relevant notes.

Each record represents a single execution of a batch or scheduled process, storing key information such as start and end timestamps, execution status, and an optional summary message.

This object is not intended for detailed logging — its purpose is to offer a concise operational overview, which can also be used for daily monitoring reports or email summaries of recent job runs.</description>
    <label>SYS Batch Journal</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>SYS Batch Journal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYS Batch Journals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>