force-app/main/default/objects/SYS_BatchJournal__c/fields/ExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTime__c</fullName>
    <formula>( EndTime__c - StartTIme__c ) * 24 * 60 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExecutionTime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>