force-app/main/default/objects/SYS_BatchJournal__c/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <label>JobName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>