force-app/main/default/objects/SYS_BatchJournal__c/fields/StartTIme__c.field-meta.xml
<CustomField>
    <fullName>StartTIme__c</fullName>
    <label>StartTIme</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>