force-app/main/default/objects/SYS_BatchJournal__c/fields/TriggeredBy__c.field-meta.xml
<CustomField>
    <fullName>TriggeredBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SYS_Batch_Journals</relationshipName>
    <type>Lookup</type>
</CustomField>