force-app/main/default/objects/SYS_BatchJournal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JobName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StartTIme__c</columns>
    <columns>EndTime__c</columns>
    <columns>ExecutionTime__c</columns>
    <columns>Notes__c</columns>
    <columns>Status__c</columns>
    <columns>TriggeredBy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>